fix - tooltip z-index, menu logo onload stick to top update

--- a/src/Volo/FrontendBundle/Resources/public/css/partial/tooltip.scss
+++ b/src/Volo/FrontendBundle/Resources/public/css/partial/tooltip.scss
@@ -3,7 +3,7 @@ $tooltip-arrow-color: $tooltip-bg;
 
 .tooltip {
   position: absolute;
-  z-index: $zindex-tooltip;
+  z-index: 800;
   display: block;
   // Reset font and text properties given new insertion method
   font-family: $font-family-base;
